[gd_scene load_steps=16 format=2]

[ext_resource path="res://Minigames/Pumpkin Game/PumpkinGame.gd" type="Script" id=1]
[ext_resource path="res://Minigames/Pumpkin Game/Sprites/Barrel.png" type="Texture" id=2]
[ext_resource path="res://Minigames/Pumpkin Game/Sprites/Rod.png" type="Texture" id=3]
[ext_resource path="res://Minigames/Pumpkin Game/Hook.tscn" type="PackedScene" id=4]
[ext_resource path="res://Minigames/Pumpkin Game/PumpkinMover.gd" type="Script" id=5]
[ext_resource path="res://Minigames/Balloon Game/Sounds/Balloon.ogg" type="AudioStream" id=6]
[ext_resource path="res://Minigames/Timer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Minigames/Effects/LoseScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://Minigames/Effects/WinScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://Minigames/Pumpkin Game/Pumpkin.tscn" type="PackedScene" id=10]
[ext_resource path="res://Minigames/Pumpkin Game/Sprites/Selector.png" type="Texture" id=11]
[ext_resource path="res://Minigames/Pumpkin Game/Matcher.gd" type="Script" id=12]
[ext_resource path="res://Minigames/Pumpkin Game/LineDrawer.gd" type="Script" id=13]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 60.0933, -1.57312, -60.0933, 1.57312, 933.88, 527.77, 47.706, -25.9438, -47.706, 25.9438, 767.918, 562.664, 4.23307, -48.1512, -4.23307, 48.1512, 660.584, 688.998, -37.0394, -13.2283, 37.0394, 13.2283, 774.918, 788.998, -40.2887, -1.72493, 40.2887, 1.72493, 968.585, 825.998, -32.2772, 30.6898, 32.2772, -30.6898, 1185.58, 764.664, 20.6362, 21.6945, -20.6362, -21.6945, 1180.92, 610.998, 46.8791, 11.1241, -46.8791, -11.1241, 1076.75, 544.702, 61.0372, -0.629249, -61.0372, 0.629249, 933.88, 527.77 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 269.754, 16.8751 )

[node name="PumpkinGame" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_left = 160.0
margin_top = 90.0
margin_right = 1760.0
margin_bottom = 990.0
color = Color( 0.254902, 0.184314, 0.0352941, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Barrel" type="Sprite" parent="."]
position = Vector2( 995.782, 607.344 )
scale = Vector2( 22.6488, 23.8063 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rod" type="Sprite" parent="."]
position = Vector2( 1306.75, 388.885 )
scale = Vector2( 28.3253, 14.3316 )
texture = ExtResource( 3 )

[node name="RodPoint" type="Node2D" parent="Rod"]
position = Vector2( -10.5478, -13.8486 )

[node name="Hook" parent="." instance=ExtResource( 4 )]
position = Vector2( 1000, 270 )
scale = Vector2( 1, 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -80.0

[node name="Timer" parent="." instance=ExtResource( 7 )]
time_left = 60

[node name="PumpkinMover" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="PumpkinPath" type="Path2D" parent="PumpkinMover"]
position = Vector2( 55.0822, 1.00235 )
curve = SubResource( 1 )

[node name="PumpkinPathFollow1" type="PathFollow2D" parent="PumpkinMover/PumpkinPath"]
position = Vector2( 933.88, 527.77 )
rotate = false

[node name="Pumpkin" parent="PumpkinMover/PumpkinPath/PumpkinPathFollow1" instance=ExtResource( 10 )]
position = Vector2( -0.395813, 0.760132 )

[node name="PumpkinPathFollow2" type="PathFollow2D" parent="PumpkinMover/PumpkinPath"]
position = Vector2( 933.88, 527.77 )
rotate = false

[node name="Pumpkin" parent="PumpkinMover/PumpkinPath/PumpkinPathFollow2" instance=ExtResource( 10 )]
position = Vector2( -0.395813, 0.760132 )

[node name="PumpkinPathFollow3" type="PathFollow2D" parent="PumpkinMover/PumpkinPath"]
position = Vector2( 933.88, 527.77 )
rotate = false

[node name="Pumpkin" parent="PumpkinMover/PumpkinPath/PumpkinPathFollow3" instance=ExtResource( 10 )]
position = Vector2( -0.395813, 0.760132 )

[node name="PumpkinPathFollow4" type="PathFollow2D" parent="PumpkinMover/PumpkinPath"]
position = Vector2( 933.88, 527.77 )
rotate = false

[node name="Pumpkin" parent="PumpkinMover/PumpkinPath/PumpkinPathFollow4" instance=ExtResource( 10 )]
position = Vector2( -0.395813, 0.760132 )

[node name="PumpkinPathFollow5" type="PathFollow2D" parent="PumpkinMover/PumpkinPath"]
position = Vector2( 933.88, 527.77 )
rotate = false

[node name="Pumpkin" parent="PumpkinMover/PumpkinPath/PumpkinPathFollow5" instance=ExtResource( 10 )]
position = Vector2( -0.395813, 0.760132 )

[node name="PumpkinPathFollow6" type="PathFollow2D" parent="PumpkinMover/PumpkinPath"]
position = Vector2( 933.88, 527.77 )
rotate = false

[node name="Pumpkin" parent="PumpkinMover/PumpkinPath/PumpkinPathFollow6" instance=ExtResource( 10 )]
position = Vector2( -0.395813, 0.760132 )

[node name="PumpkinPathFollow7" type="PathFollow2D" parent="PumpkinMover/PumpkinPath"]
position = Vector2( 933.88, 527.77 )
rotate = false

[node name="Pumpkin" parent="PumpkinMover/PumpkinPath/PumpkinPathFollow7" instance=ExtResource( 10 )]
position = Vector2( -0.395813, 0.760132 )

[node name="PumpkinPathFollow8" type="PathFollow2D" parent="PumpkinMover/PumpkinPath"]
position = Vector2( 933.88, 527.77 )
rotate = false

[node name="Pumpkin" parent="PumpkinMover/PumpkinPath/PumpkinPathFollow8" instance=ExtResource( 10 )]
position = Vector2( -0.395813, 0.760132 )

[node name="Matcher" type="Node2D" parent="."]
position = Vector2( -30.6667, -95.3333 )
script = ExtResource( 12 )

[node name="Selector" type="Sprite" parent="Matcher"]
position = Vector2( 565.558, 497.514 )
texture = ExtResource( 11 )

[node name="Selector2" type="Sprite" parent="Matcher"]
position = Vector2( 339.558, 498.181 )
texture = ExtResource( 11 )

[node name="LineDrawer" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="LoseScreen" parent="." instance=ExtResource( 8 )]
position = Vector2( 956.117, 487.53 )

[node name="WinScreen" parent="." instance=ExtResource( 9 )]
position = Vector2( 957.06, 486.588 )

[node name="HookStopper" type="Area2D" parent="."]
position = Vector2( 977.613, 917.032 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HookStopper"]
position = Vector2( 5.34546, 23.7573 )
shape = SubResource( 2 )

[connection signal="time_out" from="Timer" to="." method="_on_game_lost"]
